--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section>
             <div class="card1">
-                <h2>About Me</h2>
+                <h1>About Me</h1>
                 <div class="paragraph">
                     <p>My name is Sam Guedes, and I am a student at BYU-Idaho. I am currently enrolled in the WDD 131 course, which focuses on dynamic web fundamentals. 
                         I have a passion for web development and enjoy learning new technologies.</p>
@@ -76,7 +76,7 @@
     <footer>
         <p>&copy; <span id="currentyear"></span> Sam Guedes, Brazil</p>
         
-        <p id="lastmodified"></p>
+        <p><span id="lastmodified"></span></p>
 
         <script src="scripts/getdates.js"></script>
     </footer>
