--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+
+     <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
     <header>
@@ -78,7 +80,6 @@
         
         <p><span id="lastmodified"></span></p>
 
-        <script src="scripts/getdates.js"></script>
     </footer>
 </body>
 </html>
