--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -31,9 +31,11 @@
         <section>
             <h2>Color Schema</h2>
             <ul>
-                <li><strong>Primary Color:</strong> #e63946 (Deep Red) - used for headings, links, and highlights</li>
-                <li><strong>Background Color:</strong> #1c1c1c (Dark Gray) - used for the page background to create a sleek look</li>
-                <li><strong>Text Color:</strong> #aaa (Light Gray) - used for body text and descriptions</li>
+                <li><strong>Primary Color:</strong> #F0F3F5 (Light Gray) - used mainly for backgrounds of odd sections and header text</li>
+                <li><strong>Accent Color:</strong> rgb(4, 4, 66) (Dark Blue) - used for header background, even sections background, borders, and some text</li>
+                <li><strong>Accent Color 2:</strong> #7B2D26 (Rusty Brown) - used for section backgrounds, bullet points, borders, and highlights</li>
+                <li><strong>Accent Color 3:</strong> rgb(5, 5, 136) (Bright Blue) - used as the main page background color</li>
+                <li><strong>Text Dark:</strong> black - used for main body text and strong contrast in odd sections</li>
             </ul>
         </section>
         <section>
@@ -43,7 +45,12 @@
                 <li><strong>Body Font:</strong> 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif – clean and readable for paragraph content</li>
             </ul>
         </section>
-        
+        <section>
+            <h2>Wireframes</h2>
+            <h3>Mobile View and Desktop</h3>
+            <img src="images/wireframemobile.png" alt="Mobile wireframe layout">
+            <img src="images/wireframedesktop.png" alt="Desktop wireframe layout">
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 | Sam Dantas Guedes | Luxury and Sports Cars </p>
