--- a/form.html
+++ b/form.html
@@ -62,7 +62,7 @@
             </div>
             <br>
             <label for="date">Date of Installation</label>
-            <di>
+            <div>
                 <input type="date" id="date" name="date" required>
             </div>
             <br>
