--- a/project/favorites.html
+++ b/project/favorites.html
@@ -9,9 +9,10 @@
     <meta name="description" content="View your favorite luxury car list, compare models and explore more in the LuxuryCars gallery">
     <meta name="author" content="Sam Guedes">
 
-    <link rel="stylesheet" href="styles/favorites-styles.css">
+    <link rel="stylesheet" href="styles/favorites.css">
+    <link rel="stylesheet" href="styles/favorites-large.css">
 
-    <script src="scripts/favorites-script.js" defer></script>
+    <script src="scripts/favorites.js" defer></script>
 
 </head>
 <body>
@@ -61,7 +62,5 @@
             </div>
         </div>
     </main>
-
-    <script src="favorites-script.js"></script>
 </body>
 </html>
