--- a/project/gallery.html
+++ b/project/gallery.html
@@ -9,9 +9,10 @@
     <meta name="description" content="Explore our exclusive luxury car gallery with stunning images, technical details and iconic brands.">
     <meta name="author" content="Sam Guedes">
 
-    <link rel="stylesheet" href="styles/gallery-styles.css">
+    <link rel="stylesheet" href="styles/gallery.css">
+    <link rel="stylesheet" href="styles/gallery-large.css">
 
-    <script src="scripts/gallery-script.js" defer></script>
+    <script src="scripts/gallery.js" defer></script>
 
 </head>
 <body>
@@ -68,6 +69,5 @@
         </div>
     </main>
 
-    <script src="gallery-script.js"></script>
 </body>
 </html>
